{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "54a6a3c3-8378-4510-8129-77b09d1f5cb7",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "7d6725ab-0b3f-4952-a4f2-da22261fe6c3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IsTouching",
                    "type": "Button",
                    "id": "7c200c10-19d6-499e-8eb5-32372db4b2b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ca5a0ee-ebb1-4e30-9077-e8c5f19f900d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6609069c-7f87-434b-8627-c94f1b766f03",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsTouching",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}